--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ description: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus 
 
 ### Site Structure
 
-baseurl: "/edition_base" # the subpath of your site
-url: "https://recoveryhub.github.io/" # should not change for Recovery Hub projects
+baseurl: "/poemjorge" # the subpath of your site
+url: "https://elprieto.github.io/" # should not change for Recovery Hub projects
 
 ### Contact
 
